Changelog
=========

4.0.1 - unreleased
------------------


4.0 - 2010-07-18
----------------

- Use the standard libraries doctest module.
  [hannosch]

4.0b1 - 2010-03-01
------------------

- Stopped the cookie from being expired if a redirect (301, 302) or not-modified
  (304) response is sent. This means that if you set a redirect and then
  (superfluously) render a template that would show the status message, you
  won't lose the message.
  [optilude]

4.0a2 - 2009-12-17
------------------

- Changed the default type of a new message from the empty string to info.
  [hannosch]

4.0a1 - 2009-12-17
------------------

- Simplified the interface to use simpler add/show method names while keeping
  backwards compatibility.
  [hannosch]

- More code simplification. Make the code itself independent of Zope2.
  [hannosch]

- Removed a five:implements statement, as the ZPublisher.HTTPRequest is always
  an IBrowserRequest in Zope 2.12.
  [hannosch]

- This version depends on Zope 2.12+.
  [hannosch]

- Package metadata cleanup.
  [hannosch]

- Declare package and test dependencies.
  [hannosch]

3.0.3 - 2007-11-24
------------------

- Use binascii.b2a_base64 instead of base64.encodestring; the former doesn't
  inject newlines every 76 characters, which makes it easier to strip just the
  last one (slightly faster). This fixes tickets #7323 and #7325.
  [mj]

3.0.2 - 2007-11-06
------------------

- Fixed encoding format for the cookie value. The former format imposed a
  serious security risk. The full security issue is tracked at:
  http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2007-5741. This also fixes
  http://dev.plone.org/plone/ticket/6943.
  [hannosch, witsch, mj]

3.0.1 - 2007-10-07
------------------

- Added the IAttributeAnnotatable interface assignment for the request to this
  package as well as the inclusion of the zope.annotation, as we rely on it.
  [hannosch]

3.0 - 2007-08-09
----------------

- No changes.
  [hannosch]

3.0rc1 - 2007-07-10