@@ -4,6 +4,8 @@ Changelog
 4.0.1 - unreleased
 ------------------
 
+- Convert tests to plone.app.testing.
+  [do3cc]
 
 4.0 - 2010-07-18
 ----------------
